quick fix to comment spacing

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -174,3 +174,7 @@
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
+
+.new-comment {
+	margin-top: 20px;
+}
